um no <mean#1038497>

--- a/wiki/mean.wikitext
+++ b/wiki/mean.wikitext
@@ -1,14 +1,22 @@
 ==English==
+=== Etymology ===
+''' transitive verb'''
+:From Old English '''''[[mænan]]''''', "to mean", "to allude to". Confer Durch '''''[[meenen]]''''', German '''''[[meinen]]'''''. Cognate with "[[mind]]" and German '''''[[Minne]]''''', "love".
+
+'''adjective (1)'''
+:From Old English '''''[[gemæne]]'''''. Confer Dutch '''''[[gemeen]]''''', German '''''[[gemein]]''''', Gothic '''''[[gamains]]'''''. Cognate with Latin '''''[[communis]]'''''.
+
+'''adjective (2)'''
+:From Old French '''''[[meien]]''''' (French '''''[[moyen]]'''''), Late Latin '''''[[medianus]]''''', from '''''[[medius]]'''''. Cognate with "mid".
+
+'''noun''' 
+:''?''
+
 === Pronunciation ===
 *{{IPAlink}} {{IPA|/miːn/}}
 *{{AHD|/mēn/}}
 
-=== mean (1) ===
-==== Etymology ====
-''' transitive verb'''
-:From Old English '''''[[mænan]]''''', "to mean", "to allude to". Confer Durch '''''[[meenen]]''''', German '''''[[meinen]]'''''. Cognate with "[[mind]]" and German '''''[[Minne]]''''', "love".
-
-==== Transitive verb ====
+=== Transitive verb ===
 '''to mean''' ('''meant''', '''meant''')
 # To [[convey]], [[signify]], or [[indicate]].
 #* ''What does this hieroglyph '''mean'''?'' 
@@ -29,29 +37,7 @@
 # To [[result in]]; to [[bring about]].
 #* ''One faltering step '''means''' certain death.''
 
-==== Translations ====
-{{top}}
-*Dutch: [[menen]]
-*Esperanto: [[voli diri]] (1); [[signifi]] (2), [[intenci]] (3)
-*Finnish: [[tarkoittaa]] (1, 2), [[aikoa]] (3)
-*French: [[vouloir dire]] (1); [[signifier]] (2)
-*German: [[meinen]] (1,4), [[bedeuten]] (2), [[beabsichtigen]] (3)
-*Indonesian: [[arti|berarti]], [[arti|artinya]], [[maksud|bermaksud]], [[maksud|maksudnya]]
-*Ido: [[signifikar]]
-*Interlingua: [[voler dicer]] (1); [[significar]] (2); [[intender]], [[haber]] le [[intention]] de (3); [[mantener]] un [[opinion]] (4)
-{{mid}}
-*Italian: [[voler dire]] (1); [[significare]] (2)
-*Japanese: [[意味]]する ([[いみ]]する, imi-suru), [[意図]]する ([[いと]]する, ito-suru)
-*Portuguese: [[querer dizer]] (1); [[significar]] (2); [[tencionar]], [[ter]] a [[intenção]] de (3); [[manter]] uma [[opinião]], [[falar sério]] (4)
-{{bottom}}
-
-
-
-=== mean (2) ===
-==== Etymology ====
-:From Old English '''''[[gemæne]]'''''. Confer Dutch '''''[[gemeen]]''''', German '''''[[gemein]]''''', Gothic '''''[[gamains]]'''''. Cognate with Latin '''''[[communis]]'''''.
-
-==== Adjective ====
+=== Adjective (1) ===
 '''mean''' ('''meaner''', '''meanest''')
 
 # Causing or intending to cause intentional [[harm]]; bearing ill will towards another; [[cruel]]; [[malicious]].
@@ -70,7 +56,39 @@
 *[[meanness]]
 *[[meany]]
 
-==== Translations ====
+=== Adjective (2) ===
+'''mean'''
+# Having an [[intermediate]] [[value]]; based on an [[average]]; as, [[mean distance]], [[mean time]], [[mean solar time]], [[mean sun]].
+
+=== Noun ===
+'''mean''' (''plural:'' '''means''')
+#(''statistics'') An [[intermediate]] [[value]] based on some [[measure]] of [[central tendency]], often an [[average]] or the ''[[arithmetic mean]]''. (See [[w:mean|the related Wikipedia article]])
+#See the noun ''[[means]]''
+
+==== See also ====
+*[[average]]
+*[[means]]
+*[[median]]
+*[[mode]]
+
+=== Translations ===
+'''transitive verb'''
+{{top}}
+*Dutch: [[menen]]
+*Esperanto: [[voli diri]] (1); [[signifi]] (2), [[intenci]] (3)
+*Finnish: [[tarkoittaa]] (1, 2), [[aikoa]] (3)
+*French: [[vouloir dire]] (1); [[signifier]] (2)
+*German: [[meinen]] (1,4), [[bedeuten]] (2), [[beabsichtigen]] (3)
+*Indonesian: [[arti|berarti]], [[arti|artinya]], [[maksud|bermaksud]], [[maksud|maksudnya]]
+*Ido: [[signifikar]]
+*Interlingua: [[voler dicer]] (1); [[significar]] (2); [[intender]], [[haber]] le [[intention]] de (3); [[mantener]] un [[opinion]] (4)
+{{mid}}
+*Italian: [[voler dire]] (1); [[significare]] (2)
+*Japanese: [[意味]]する ([[いみ]]する, imi-suru), [[意図]]する ([[いと]]する, ito-suru)
+*Portuguese: [[querer dizer]] (1); [[significar]] (2); [[tencionar]], [[ter]] a [[intenção]] de (3); [[manter]] uma [[opinião]], [[falar sério]] (4)
+{{bottom}}
+
+'''adjective (1)'''
 {{top}}
 *Chinese: [[卑鄙]]
 *Dutch: [[gemeen]] (1,2), [[boosaardig]] (1), [[gemiddelde]] (2)
@@ -89,27 +107,7 @@
 *Spanish: [[malo]] ''m'', [[mala]] ''f''
 {{bottom}}
 
-=== mean (3) ===
-==== Etymology ====
-:From Old French '''''[[meien]]''''' (French '''''[[moyen]]'''''), Late Latin '''''[[medianus]]''''', from '''''[[medius]]'''''. Cognate with "mid".
-
-==== Adjective ====
-'''mean'''
-# Having an [[intermediate]] [[value]]; based on an [[average]]; as, [[mean distance]], [[mean time]], [[mean solar time]], [[mean sun]].
-
-==== Noun ====
-'''mean''' (''plural:'' '''means''')
-#(''statistics'') An [[intermediate]] [[value]] based on some [[measure]] of [[central tendency]], often an [[average]] or the ''[[arithmetic mean]]''. (See [[w:mean|the related Wikipedia article]])
-#See the noun ''[[means]]''
-
-==== See also ====
-*[[average]]
-*[[means]]
-*[[median]]
-*[[mode]]
-
-==== Translations ====
-'''adjective'''
+'''adjective (2)'''
 {{top}}
 *Esperanto: [[meza]]
 *Finnish: [[keski-]]
@@ -133,6 +131,7 @@
 *Japanese: [[平均]]  ([[へいきん]], heikin) (1), [[平均値]]  ([[へいきんち]], heikinchi) (1)
 *Portuguese: [[média]] ''f'' (1)
 {{bottom}}
+
 
 [[Category:English words with multiple etymologies]]
 
