robot  Adding:hu,es,de <pájaro#92048>

--- a/wiki/p%C3%A1jaro.wikitext
+++ b/wiki/p%C3%A1jaro.wikitext
@@ -12,3 +12,7 @@
 ====Proverbs====
 * '''No hay pájaros en los nidos de ayer.''' 
 There are no birds in the nests of yesterday. Meaning: Youth passes quickly.
+
+[[de:pájaro]]
+[[es:pájaro]]
+[[hu:Pájaro]]
