robot  Adding:pl,la <carbone#98024>

--- a/wiki/carbone.wikitext
+++ b/wiki/carbone.wikitext
@@ -16,3 +16,6 @@ carbóne, /karˈbone/, /<tt>kar"bone</tt>/
 *[[carboniccio]]
 *[[carbonio]]
 [[category:Italian nouns]]
+
+[[la:Carbone]]
+[[pl:Carbone]]
