--- a/wiki/carat.wikitext
+++ b/wiki/carat.wikitext
@@ -8,5 +8,7 @@
 # A [[unit]] of [[weight]] for precious stones and pearls,  equivalent to 200 milligrams.
 # A measure of the [[purity]] of [[gold]], pure gold being 24 carats.
 
+[[fr:carat]]
 [[it:carat]]
 [[pl:Carat]]
+[[fi:Carat]]
