--- a/wiki/precession.wikitext
+++ b/wiki/precession.wikitext
@@ -7,3 +7,5 @@
 #{{astronomy}} The [[slow]] [[gyration]] of the [[earth]]'s axis around the [[pole]] of the [[ecliptic]], caused mainly by the [[gravitational]] [[pull]] of the [[sun]]  and [[moon]]
 ===Derived terms===
 *[[precession of the equinoxes]]
+====Translations====
+*Swedish: [[precession#Swedish|precession]] ''c''
