sv <coordinate system#99577>

--- a/wiki/coordinate_system.wikitext
+++ b/wiki/coordinate_system.wikitext
@@ -5,3 +5,5 @@
 #{{mathematics}} A [[method]] of [[representing]] [[point]]s in a [[space]] of given [[dimension]]s by [[coordinate]]s from an [[origin]]
 ===See also===
 *[[Cartesian coordinate]]
+====Translations====
+*Swedish: [[koordinatsystem]] ''n''
