sv <Laplace transform#99578>

--- a/wiki/Laplace_transform.wikitext
+++ b/wiki/Laplace_transform.wikitext
@@ -3,3 +3,5 @@
 {{wikipedia}}
 '''[[Laplace]] [[transform]]'''
 #{{mathematics}} a [[function]] on [[positive]] [[real number]]s such that [[differentiation]] and [[integration]] are reduced to [[multiplication]] and [[division]]
+====Translations====
+*Swedish: [[Laplacetransform]] ''c''
