sv <exponential distribution#99571>

--- a/wiki/exponential_distribution.wikitext
+++ b/wiki/exponential_distribution.wikitext
@@ -3,3 +3,5 @@
 {{wikipedia}}
 '''[[exponential]] [[distribution]]'''
 #{{mathematics}} a [[class]] of [[continuous]] [[probability distribution]]s often used to [[model]] the [[time]] between [[event]]s that happen at a [[constant]] [[average]] [[rate]]
+====Translations====
+*Swedish: [[exponentialfördelning]] ''c''
