robot  Modifying:sv <päron#40610>

--- a/wiki/p%C3%A4ron.wikitext
+++ b/wiki/p%C3%A4ron.wikitext
@@ -7,4 +7,4 @@
   [[päron]]  |  [[päron]]           [[pear]] | pears
  [[päronet]] | [[päronen]]      the pear | the pears
 
-[[sv:Päron]]
+[[sv:päron]]
