--- a/wiki/b%C3%AD.wikitext
+++ b/wiki/b%C3%AD.wikitext
@@ -3,48 +3,48 @@
 ===Verb===
 [[Infinitive]] - to be
 
-==Present Tense==
-===Positive===
+====Present Tense====
+=====Positive=====
 [[Tá]]
 
-===Negative===
+=====Negative=====
 Níl
 
-==Continuous Present Tense==
-===Positive===
+====Continuous Present Tense====
+=====Positive=====
 Bíonn
 
-===Negative===
+=====Negative=====
 Ní bhíonn
 
-==Past Tense==
-===Positive===
+====Past Tense====
+=====Positive=====
 Bhí
 
-===Negative===
+=====Negative=====
 Ní raibh
 
-==Future Tense==
-===Positive===
+====Future Tense====
+=====Positive=====
 Beidh
 
-===Negative===
+=====Negative=====
 Ní bheadh
 
-==Continuous Past Tense==
-===Positive===
+====Continuous Past Tense====
+=====Positive=====
 Bíodh
 
-===Negative===
+=====Negative=====
 Ní bhíodh
 
-==Conditional Tense==
-===Positive===
+====Conditional Tense====
+=====Positive=====
 Bheadh
 
-===Negative===
+=====Negative=====
 Ní bheadh
-==Verbal Noun==
+====Verbal Noun====
 Bí
 
 [[Category:Irish language]]
