--- a/wiki/Laplacian.wikitext
+++ b/wiki/Laplacian.wikitext
@@ -2,6 +2,10 @@
 ===Adjective===
 '''Laplacian'''
 # of, or relating to [[Laplace]]
+====Translations====
+*Swedish: [[Laplace-]]
 ===Noun===
 '''''Laplacian'''
 #{{mathematics}} the [[Laplace operator]]
+====Translations====
+*Swedish: [[Laplacian]]
