--- a/wiki/Laplacian.wikitext
+++ b/wiki/Laplacian.wikitext
@@ -8,4 +8,4 @@
 '''''Laplacian'''
 #{{mathematics}} the [[Laplace operator]]
 ====Translations====
-*Swedish: [[Laplacian]]
+*Swedish: [[Laplacian]] ''c''
