robot  Adding:pt <carne#4855>

--- a/wiki/carne.wikitext
+++ b/wiki/carne.wikitext
@@ -12,3 +12,4 @@ Spanish ''carne'' came from Latin ''caro, carnis'' meaning "flesh" or "meat".
 [[it:carne]]
 [[hu:Carne]]
 [[pl:Carne]]
+[[pt:Carne]]
