+pronuncuation, fmt <appoggiatura#46214>

--- a/wiki/appoggiatura.wikitext
+++ b/wiki/appoggiatura.wikitext
@@ -1,12 +1,12 @@
 ==English==
-
-===Noun===
-'''appoggiatura'''
-
 ===Etymology===
 Borrowed from Italian ''appoggiatura'', derived from ''appoggiare'', meaning "to lean."
 
-===Meaning===
-#A melodically important musical ornament, sounded on the beat, preceding a main note (which it is one scale-step higher or lower than) and normally subtracting for itself half of the time value of that main note; written as a note of smaller size like the [[acciaccatura]], but without the semi-oblique stroke.
-#:'''quotations''':
-#:*"The following Adagietto was like a long, melting '''appoggiatura''' composed of smaller dying falls and languid resolutions." &mdash; ''New York Times'', March 2, 1992
+=== Pronunciations ===
+*{{SAMPA}} /@.pO.dZ@."tur.@/
+*{{IPAlink}} {{IPA|/ə.pɔ.dʒə.'tʊɹ.ə/}}
+
+===Noun===
+'''appoggiatura'''
+# A melodically important musical ornament, sounded on the beat, preceding a main note (which it is one scale-step higher or lower than) and normally subtracting for itself half of the time value of that main note; written as a note of smaller size like the [[acciaccatura]], but without the semi-oblique stroke.
+#:"The following Adagietto was like a long, melting '''appoggiatura''' composed of smaller dying falls and languid resolutions." &mdash; ''New York Times'', March 2, 1992
