robot  Adding:hu <carpenter#67073>

--- a/wiki/carpenter.wikitext
+++ b/wiki/carpenter.wikitext
@@ -11,3 +11,5 @@
 *{{pt}}: [[marceneiro]] [[:pt:marceneiro|°]]
 *{{es}}: [[carpintero]] [[:es:carpintero|°]]
 *{{ru}}: [[плотник]] [[:ru:плотник|°]]
+
+[[hu:carpenter]]
