--- a/wiki/proselytize.wikitext
+++ b/wiki/proselytize.wikitext
@@ -21,3 +21,17 @@
 
 |}
 |}
+
+'''to convert someone to one's own religion'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*[[German]]: [[bekehren]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+
+|}
+|}
