robot  Adding:fi <quality#1819>

--- a/wiki/quality.wikitext
+++ b/wiki/quality.wikitext
@@ -49,3 +49,5 @@ Old French - ''qualite'', then Middle English.
 
 [[Category:Positive words]]
 [[Category:1000 English basic words]]
+
+[[fi:Quality]]
