--- a/wiki/cassation.wikitext
+++ b/wiki/cassation.wikitext
@@ -17,4 +17,5 @@ Italian ''[[cassazione]]''
 # piece of instrumental music of the eighteenth century similar to the serenade, and often performed outside
 
 [[et:Cassation]]
+[[fr:cassation]]
 [[pl:Cassation]]
