robot  Adding:es <casa#28219>

--- a/wiki/casa.wikitext
+++ b/wiki/casa.wikitext
@@ -89,9 +89,9 @@ From Latin '''casa'''
 
 '''En casa de herrero, cuchillo de palo'''
 
-#At blacksmith's house, knives are made of wood. 
+#At blacksmith's house, knives are made of wood.
 
-
+[[es:casa]]
 [[it:casa]]
 [[hu:Casa]]
 [[ja:casa]]
