robot  Adding:fi <caste#56483>

--- a/wiki/caste.wikitext
+++ b/wiki/caste.wikitext
@@ -16,6 +16,8 @@
 *[[Vaishya]]
 *[[Shudra]]
 
+[[Category:Portuguese derivations]]
+
 [[it:caste]]
 [[pl:Caste]]
-[[Category:Portuguese derivations]]
+[[fi:Caste]]
