robot  Adding:zh,fr <cat#36>

--- a/wiki/cat.wikitext
+++ b/wiki/cat.wikitext
@@ -263,7 +263,11 @@ From the [[Wolof]] suffix ''[[-kat]]''.
 *[[act]]
 *[[tac]]
 
+[[Category:1000 English basic words]]
+[[Category:Cat|Cat]]
+
 [[es:cat]]
+[[fr:cat]]
 [[it:cat]]
 [[ja:cat]]
 [[pl:Cat]]
@@ -271,5 +275,4 @@ From the [[Wolof]] suffix ''[[-kat]]''.
 [[fi:Cat]]
 [[sv:cat]]
 [[vi:cat]]
-[[Category:1000 English basic words]]
-[[Category:Cat|Cat]]
+[[zh:Cat]]
