--- a/wiki/Quechua.wikitext
+++ b/wiki/Quechua.wikitext
@@ -12,4 +12,5 @@
 *[http://www.websters-online-dictionary.org/definition/Quechua-english/ Quechua - English Dictionary]: from [http://www.websters-online-dictionary.org/ Webster's Dictionary] - the Rosetta Edition.
 
 [[gl:Quechua]]
+[[it:quechua]]
 [[nl:Quechua]]
