--- a/wiki/catgut.wikitext
+++ b/wiki/catgut.wikitext
@@ -3,3 +3,5 @@
 '''catgut'''
 #A cord of great toughness made from the intestines of animals, esp. of sheep, used for strings of musical instruments, etc.
 #A sort of linen or canvas, with wide interstices.
+
+[[it:catgut]]
