robot  Adding:et <catastrophe#73890>

--- a/wiki/catastrophe.wikitext
+++ b/wiki/catastrophe.wikitext
@@ -5,6 +5,8 @@
 ====Translations====
 *French: [[catastrophe]] (''f'')
 *German: [[Katastrophe]]
+[[Category:Greek derivations]]
+
+[[et:Catastrophe]]
 [[it:catastrophe]]
 [[pl:Catastrophe]]
-[[Category:Greek derivations]]
