robot  Adding:fi <category#57887>

--- a/wiki/category.wikitext
+++ b/wiki/category.wikitext
@@ -27,6 +27,8 @@
 *[[categorise]], [[categorize]]
 *[[category theory]]
 
-[[it:category]]
-[[vi:category]]
 [[Category:Greek derivations]]
+
+[[it:category]]
+[[fi:Category]]
+[[vi:category]]
