tablefied the conjugations for ease of use. <bí#99580>

--- a/wiki/b%C3%AD.wikitext
+++ b/wiki/b%C3%AD.wikitext
@@ -1,50 +1,26 @@
 ==Irish==
+=== Intransitive Verb ===
+'''bí'''
+# to [[be]]
 
-===Verb===
-[[Infinitive]] - to be
-
-====Present Tense====
-=====Positive=====
-[[Tá]]
-
-=====Negative=====
-Níl
-
-====Continuous Present Tense====
-=====Positive=====
-Bíonn
-
-=====Negative=====
-Ní bhíonn
-
-====Past Tense====
-=====Positive=====
-Bhí
-
-=====Negative=====
-Ní raibh
-
-====Future Tense====
-=====Positive=====
-Beidh
-
-=====Negative=====
-Ní bheadh
-
-====Continuous Past Tense====
-=====Positive=====
-Bíodh
-
-=====Negative=====
-Ní bhíodh
-
-====Conditional Tense====
-=====Positive=====
-Bheadh
-
-=====Negative=====
-Ní bheadh
-====Verbal Noun====
-Bí
-
+{| {{Prettytable100}}
+|-
+! colspan=3 | <b>Conjugations </b>
+|-
+| || <b>Positive</b> || '''Negative'''
+|-
+| '''Present''' || [[Tá]] || [[Níl]]
+|-
+| '''Present<br>Progressive''' || [[Bíonn]] || [[Ní bhíonn]]
+|-
+|'''Past''' || [[Bhí]] || [[Ní raibh]]
+|-
+| '''Past<br>Progressive''' || [[Bíodh]] || [[Ni bíodh]]
+|-
+| '''Future''' || [[Beidh]] || [[Ni beidh]]
+|-
+| '''Conditional''' || [[Bheadh]] || [[Ni bheadh]] 
+|- 
+| '''Verbal<br>noun''' || ! colspan=2 | Bí 
+|}
 [[Category:Irish language]]
