--- a/wiki/mean.wikitext
+++ b/wiki/mean.wikitext
@@ -1,22 +1,14 @@
 ==English==
-=== Etymology ===
-''' transitive verb'''
-:From Old English '''''[[mænan]]''''', "to mean", "to allude to". Confer Durch '''''[[meenen]]''''', German '''''[[meinen]]'''''. Cognate with "[[mind]]" and German '''''[[Minne]]''''', "love".
-
-'''adjective (1)'''
-:From Old English '''''[[gemæne]]'''''. Confer Dutch '''''[[gemeen]]''''', German '''''[[gemein]]''''', Gothic '''''[[gamains]]'''''. Cognate with Latin '''''[[communis]]'''''.
-
-'''adjective (2)'''
-:From Old French '''''[[meien]]''''' (French '''''[[moyen]]'''''), Late Latin '''''[[medianus]]''''', from '''''[[medius]]'''''. Cognate with "mid".
-
-'''noun''' 
-:''?''
-
 === Pronunciation ===
 *{{IPAlink}} {{IPA|/miːn/}}
 *{{AHD|/mēn/}}
 
-=== Transitive verb ===
+=== mean (1) ===
+==== Etymology ====
+''' transitive verb'''
+:From Old English '''''[[mænan]]''''', "to mean", "to allude to". Confer Durch '''''[[meenen]]''''', German '''''[[meinen]]'''''. Cognate with "[[mind]]" and German '''''[[Minne]]''''', "love".
+
+==== Transitive verb ====
 '''to mean''' ('''meant''', '''meant''')
 # To [[convey]], [[signify]], or [[indicate]].
 #* ''What does this hieroglyph '''mean'''?'' 
@@ -37,7 +29,29 @@
 # To [[result in]]; to [[bring about]].
 #* ''One faltering step '''means''' certain death.''
 
-=== Adjective (1) ===
+==== Translations ====
+{{top}}
+*Dutch: [[menen]]
+*Esperanto: [[voli diri]] (1); [[signifi]] (2), [[intenci]] (3)
+*Finnish: [[tarkoittaa]] (1, 2), [[aikoa]] (3)
+*French: [[vouloir dire]] (1); [[signifier]] (2)
+*German: [[meinen]] (1,4), [[bedeuten]] (2), [[beabsichtigen]] (3)
+*Indonesian: [[arti|berarti]], [[arti|artinya]], [[maksud|bermaksud]], [[maksud|maksudnya]]
+*Ido: [[signifikar]]
+*Interlingua: [[voler dicer]] (1); [[significar]] (2); [[intender]], [[haber]] le [[intention]] de (3); [[mantener]] un [[opinion]] (4)
+{{mid}}
+*Italian: [[voler dire]] (1); [[significare]] (2)
+*Japanese: [[意味]]する ([[いみ]]する, imi-suru), [[意図]]する ([[いと]]する, ito-suru)
+*Portuguese: [[querer dizer]] (1); [[significar]] (2); [[tencionar]], [[ter]] a [[intenção]] de (3); [[manter]] uma [[opinião]], [[falar sério]] (4)
+{{bottom}}
+
+
+
+=== mean (2) ===
+==== Etymology ====
+:From Old English '''''[[gemæne]]'''''. Confer Dutch '''''[[gemeen]]''''', German '''''[[gemein]]''''', Gothic '''''[[gamains]]'''''. Cognate with Latin '''''[[communis]]'''''.
+
+==== Adjective ====
 '''mean''' ('''meaner''', '''meanest''')
 
 # Causing or intending to cause intentional [[harm]]; bearing ill will towards another; [[cruel]]; [[malicious]].
@@ -56,39 +70,7 @@
 *[[meanness]]
 *[[meany]]
 
-=== Adjective (2) ===
-'''mean'''
-# Having an [[intermediate]] [[value]]; based on an [[average]]; as, [[mean distance]], [[mean time]], [[mean solar time]], [[mean sun]].
-
-=== Noun ===
-'''mean''' (''plural:'' '''means''')
-#(''statistics'') An [[intermediate]] [[value]] based on some [[measure]] of [[central tendency]], often an [[average]] or the ''[[arithmetic mean]]''. (See [[w:mean|the related Wikipedia article]])
-#See the noun ''[[means]]''
-
-==== See also ====
-*[[average]]
-*[[means]]
-*[[median]]
-*[[mode]]
-
-=== Translations ===
-'''transitive verb'''
-{{top}}
-*Dutch: [[menen]]
-*Esperanto: [[voli diri]] (1); [[signifi]] (2), [[intenci]] (3)
-*Finnish: [[tarkoittaa]] (1, 2), [[aikoa]] (3)
-*French: [[vouloir dire]] (1); [[signifier]] (2)
-*German: [[meinen]] (1,4), [[bedeuten]] (2), [[beabsichtigen]] (3)
-*Indonesian: [[arti|berarti]], [[arti|artinya]], [[maksud|bermaksud]], [[maksud|maksudnya]]
-*Ido: [[signifikar]]
-*Interlingua: [[voler dicer]] (1); [[significar]] (2); [[intender]], [[haber]] le [[intention]] de (3); [[mantener]] un [[opinion]] (4)
-{{mid}}
-*Italian: [[voler dire]] (1); [[significare]] (2)
-*Japanese: [[意味]]する ([[いみ]]する, imi-suru), [[意図]]する ([[いと]]する, ito-suru)
-*Portuguese: [[querer dizer]] (1); [[significar]] (2); [[tencionar]], [[ter]] a [[intenção]] de (3); [[manter]] uma [[opinião]], [[falar sério]] (4)
-{{bottom}}
-
-'''adjective (1)'''
+==== Translations ====
 {{top}}
 *Chinese: [[卑鄙]]
 *Dutch: [[gemeen]] (1,2), [[boosaardig]] (1), [[gemiddelde]] (2)
@@ -107,7 +89,27 @@
 *Spanish: [[malo]] ''m'', [[mala]] ''f''
 {{bottom}}
 
-'''adjective (2)'''
+=== mean (3) ===
+==== Etymology ====
+:From Old French '''''[[meien]]''''' (French '''''[[moyen]]'''''), Late Latin '''''[[medianus]]''''', from '''''[[medius]]'''''. Cognate with "mid".
+
+==== Adjective ====
+'''mean'''
+# Having an [[intermediate]] [[value]]; based on an [[average]]; as, [[mean distance]], [[mean time]], [[mean solar time]], [[mean sun]].
+
+==== Noun ====
+'''mean''' (''plural:'' '''means''')
+#(''statistics'') An [[intermediate]] [[value]] based on some [[measure]] of [[central tendency]], often an [[average]] or the ''[[arithmetic mean]]''. (See [[w:mean|the related Wikipedia article]])
+#See the noun ''[[means]]''
+
+==== See also ====
+*[[average]]
+*[[means]]
+*[[median]]
+*[[mode]]
+
+==== Translations ====
+'''adjective'''
 {{top}}
 *Esperanto: [[meza]]
 *Finnish: [[keski-]]
@@ -131,7 +133,6 @@
 *Japanese: [[平均]]  ([[へいきん]], heikin) (1), [[平均値]]  ([[へいきんち]], heikinchi) (1)
 *Portuguese: [[média]] ''f'' (1)
 {{bottom}}
-
 
 [[Category:English words with multiple etymologies]]
 
