robot  Adding:fr,fi <question#49890>

--- a/wiki/question.wikitext
+++ b/wiki/question.wikitext
@@ -55,5 +55,8 @@
 
 [[Category:Communication]]
 
-[[et:Question]]
 [[Category:1000 English basic words]]
+
+[[et:Question]]
+[[fr:question]]
+[[fi:Question]]
