robot  Adding:pl <cation#93929>

--- a/wiki/cation.wikitext
+++ b/wiki/cation.wikitext
@@ -4,3 +4,5 @@
 
 #a [[positive]]ly [[charged]] [[ion]]
 #the [[ion]] in an [[electrolyze]]d [[solution]] that [[migrate]]s to the [[cathode]]
+
+[[pl:Cation]]
