--- a/wiki/trikatu.wikitext
+++ b/wiki/trikatu.wikitext
@@ -1,1 +1,1 @@
-An Ayurvedic digestive stimulant consisting of equal parts Ginger root, Pippali berry, and Black Pepper. Because it has a warming effect it is effective at removing excess Kapha. (see [[Ayurveda]])
+'''Trikatu''' is a digestive stimulant consisting of equal parts [[ginger root]], pippali berry, and [[black pepper]], used in [[ayurveda|ayurvedic]] healing. Because it has a warming effect it is effective at removing excess kapha.
