robot  Adding:de,nl <quiz#624>

--- a/wiki/quiz.wikitext
+++ b/wiki/quiz.wikitext
@@ -54,4 +54,6 @@ The meaning "hoax" is the original (1796), shifting to the meaning "interrogate"
 [[Category:English concrete nouns]]
 [[Category:English transitive verbs]]
 
+[[de:Quiz]]
+[[nl:quiz]]
 [[pl:Quiz]]
