--- a/wiki/cedar.wikitext
+++ b/wiki/cedar.wikitext
@@ -5,3 +5,5 @@
 {{wikipedia}}
 #(countable) a [[coniferous]] [[tree]] of the the genus [[Cedrus]] in the coniferous plant family [[Pinaceae]]
 #(uncountable) the [[aromatic]] [[wood]] from such a tree
+
+[[it:cedar]]
