minor aesthetic changes <mean#1038497>

--- a/wiki/mean.wikitext
+++ b/wiki/mean.wikitext
@@ -2,9 +2,7 @@
 === Pronunciation ===
 *{{IPAlink}} {{IPA|/miːn/}}
 *{{AHD|/mēn/}}
-
-=== mean (1) ===
-==== Etymology ====
+=== Etymology 1 ===
 ''' transitive verb'''
 :From Old English '''''[[mænan]]''''', "to mean", "to allude to". Confer Durch '''''[[meenen]]''''', German '''''[[meinen]]'''''. Cognate with "[[mind]]" and German '''''[[Minne]]''''', "love".
 
@@ -47,8 +45,7 @@
 
 
 
-=== mean (2) ===
-==== Etymology ====
+=== Etymology 2 ===
 :From Old English '''''[[gemæne]]'''''. Confer Dutch '''''[[gemeen]]''''', German '''''[[gemein]]''''', Gothic '''''[[gamains]]'''''. Cognate with Latin '''''[[communis]]'''''.
 
 ==== Adjective ====
@@ -89,27 +86,15 @@
 *Spanish: [[malo]] ''m'', [[mala]] ''f''
 {{bottom}}
 
-=== mean (3) ===
-==== Etymology ====
+
+==== Etymology 3 ====
 :From Old French '''''[[meien]]''''' (French '''''[[moyen]]'''''), Late Latin '''''[[medianus]]''''', from '''''[[medius]]'''''. Cognate with "mid".
 
 ==== Adjective ====
 '''mean'''
 # Having an [[intermediate]] [[value]]; based on an [[average]]; as, [[mean distance]], [[mean time]], [[mean solar time]], [[mean sun]].
 
-==== Noun ====
-'''mean''' (''plural:'' '''means''')
-#(''statistics'') An [[intermediate]] [[value]] based on some [[measure]] of [[central tendency]], often an [[average]] or the ''[[arithmetic mean]]''. (See [[w:mean|the related Wikipedia article]])
-#See the noun ''[[means]]''
-
-==== See also ====
-*[[average]]
-*[[means]]
-*[[median]]
-*[[mode]]
-
-==== Translations ====
-'''adjective'''
+===== Translations =====
 {{top}}
 *Esperanto: [[meza]]
 *Finnish: [[keski-]]
@@ -120,7 +105,18 @@
 *Italian: [[medio]]
 {{bottom}}
 
-'''noun'''
+==== Noun ====
+'''mean''' (''plural:'' '''means''')
+#(''statistics'') An [[intermediate]] [[value]] based on some [[measure]] of [[central tendency]], often an [[average]] or the ''[[arithmetic mean]]''. (See [[w:mean|the related Wikipedia article]])
+#See the noun ''[[means]]''
+
+===== See also =====
+*[[average]]
+*[[means]]
+*[[median]]
+*[[mode]]
+
+===== Translations =====
 {{top}}
 *Dutch: [[gemiddelde]] (1)
 *Finnish: [[keskiarvo]] (1)
