robot  Modifying:fr <Celsius#52959>

--- a/wiki/Celsius.wikitext
+++ b/wiki/Celsius.wikitext
@@ -36,4 +36,5 @@ After Swedish [[astronomer]] [[w:Anders Celsius|Anders Celsius]] (1701&ndash;174
 *[http://www.unc.edu/~rowlett/units/dictD.html#celsius Entry for "degree Celsius" in <cite>How Many? A Dictionary of Units of Measurement</cite>]
 
 [[Category:English eponyms]]
-[[fr:Celsius]]
+
+[[fr:degré Celsius]]
