robot  Adding:pl,pt,ja,it <cento#95016>

--- a/wiki/cento.wikitext
+++ b/wiki/cento.wikitext
@@ -22,3 +22,8 @@ cènto, /ˈtʃɛnto/, /<tt>"tSEnto</tt>/
 *[[centumviro]]
 *[[centuplo]]
 *[[centuria]]
+
+[[it:cento]]
+[[ja:cento]]
+[[pl:Cento]]
+[[pt:Cento]]
