Reverting to the original formatting while discussion is underway. <mean#1038497>

--- a/wiki/mean.wikitext
+++ b/wiki/mean.wikitext
@@ -2,7 +2,7 @@
 === Pronunciation ===
 *{{IPAlink}} {{IPA|/miːn/}}
 *{{AHD|/mēn/}}
-=== Etymology 1 ===
+=== mean (1) ===
 ''' transitive verb'''
 :From Old English '''''[[mænan]]''''', "to mean", "to allude to". Confer Durch '''''[[meenen]]''''', German '''''[[meinen]]'''''. Cognate with "[[mind]]" and German '''''[[Minne]]''''', "love".
 
@@ -45,7 +45,7 @@
 
 
 
-=== Etymology 2 ===
+=== mean (2) ===
 :From Old English '''''[[gemæne]]'''''. Confer Dutch '''''[[gemeen]]''''', German '''''[[gemein]]''''', Gothic '''''[[gamains]]'''''. Cognate with Latin '''''[[communis]]'''''.
 
 ==== Adjective ====
@@ -87,7 +87,7 @@
 {{bottom}}
 
 
-==== Etymology 3 ====
+=== mean (3) ===
 :From Old French '''''[[meien]]''''' (French '''''[[moyen]]'''''), Late Latin '''''[[medianus]]''''', from '''''[[medius]]'''''. Cognate with "mid".
 
 ==== Adjective ====
