robot  Adding:fi,sv <rad#38928>

--- a/wiki/rad.wikitext
+++ b/wiki/rad.wikitext
@@ -102,7 +102,7 @@
 | [[radens]] 
 | [[raders]] 
 | [[radernas]] 
-|} 
+|}
 
 [[de:Rad]]
 [[fr:rad]]
@@ -110,3 +110,5 @@
 [[hu:Rad]]
 [[nl:rad]]
 [[pl:Rad]]
+[[fi:Rad]]
+[[sv:Rad]]
