--- a/wiki/Plotinus.wikitext
+++ b/wiki/Plotinus.wikitext
@@ -1,2 +1,5 @@
-3rd century Christian mystic, sometimes called a Neo-Platonist.  Forumlator of the three Hypostasi; The One, The Mind, The Soul.
-{{cleanup}}{{rfd}}
+==English==
+===Proper noun===
+{{wikipedia}}
+'''Plotinus'''
+# [[Roman]] [[philosopher]] 205-270; father of [[Neoplatonism]]
