robot  Adding:zh,es <rain#6382>

--- a/wiki/rain.wikitext
+++ b/wiki/rain.wikitext
@@ -101,8 +101,11 @@ arabic: مطر
 ===See also===
 *[[w:Rain|Wikipedia article on rain]]
 
-[[gl:Rain]]
-[[nl:rain]]
 [[Category:English verbs]]
 [[Category:Impersonal verbs]]
 [[Category:1000 English basic words]]
+
+[[es:rain]]
+[[gl:Rain]]
+[[nl:rain]]
+[[zh:Rain]]
