--- a/wiki/estnisk.wikitext
+++ b/wiki/estnisk.wikitext
@@ -1,1 +1,26 @@
-&#256;
+==Swedish==
+===Adjective===
+;estnisk
+#[[Estonian]]; from; of; or pertaining to [[Estonia]], the people of Estonia or the language of Estonia
+====Conjugations====
+{| border=1 cellspacing=0 
+|- bgcolor="#FFFFF0" align=center
+! colspan=4 width=400 | Singular
+! rowspan=3 width=100 | Plural
+|- bgcolor="#FFFFF0" align=center
+! colspan=2 width=200 | Indefinite form
+! colspan=2 width=200 | Definite form
+|- bgcolor="#FFFFF0" align=center
+| width=100 | ''Common''
+| width=100 | ''Neuter''
+| width=100 | ''Sexus maskuline''
+| width=100 | ''Other sexus''
+|- align=center
+| [[estnisk]]
+| [[estniskt]]
+| [[estniske]]
+| [[estniska]]
+| [[estniska]]
+|}
+''Comparative and superlative by [[mer]] and [[mest]], respectively''
+[[sv:estnisk]]
