--- a/wiki/chalk.wikitext
+++ b/wiki/chalk.wikitext
@@ -107,5 +107,7 @@ Old English [[cealc]], borrowed from Latin [[calx]] "limestone", borrowed from A
 *[[calcium]]
 
 [[category:Climbing]]
-[[it:chalk]]
 [[Category:1000 English basic words]]
+
+[[fr:chalk]]
+[[it:chalk]]
