robot  Adding:it <chagrin#98820>

--- a/wiki/chagrin.wikitext
+++ b/wiki/chagrin.wikitext
@@ -14,3 +14,5 @@ Possibly from {{F.}} ''[[chagraigner]]''
 '''chagrin'''
 # to [[bother]] or [[vex]]
 #:''She was '''chagrinned''' to note that the paint had dried into a blotchy mess.''
+
+[[it:chagrin]]
