robot  Adding:it <chaff#91426>

--- a/wiki/chaff.wikitext
+++ b/wiki/chaff.wikitext
@@ -6,3 +6,5 @@
 #by extension, any excess or unwanted material, resource, or person; anything [[worthless]]
 #:''There are plenty of good websites on the subject, but take care to separate the wheat from the '''chaff'''.''
 :*The phrase '''to separate the wheat from the chaff''' usually means to select only that which is of value.
+
+[[it:chaff]]
