--- a/wiki/tough.wikitext
+++ b/wiki/tough.wikitext
@@ -8,7 +8,7 @@
 #[[rowdy]] or [[rough]]
 #(''of questions etc'') [[difficult]] or [[demanding]]
 #(''slang'') too bad!
-#(''Material science'') Undergoing plastic deformation before breaking
+#(''material science'') Undergoing plastic deformation before breaking
 ===Derived terms===
 *[[tough it out]]
 [[Category:English adjectives]]
