/* Related terms */ <brain#7891>

--- a/wiki/brain.wikitext
+++ b/wiki/brain.wikitext
@@ -38,9 +38,42 @@ Middle English, derived from Old English ''[[braegen]]'' and ''[[bregen]]''.
 *Swedish: [[hjärna]] ''c'' (1,2)
 
 ===Related terms===
+*[[brain cell]]
+*[[brain coral]]
+*[[brain dead]]
+*[[brain death]]
+*[[brain disease]]
+*[[brain disorder]]
+*[[brain doctor]]
+*[[brain drain]]
 *[[brain fag]]
+*[[brain fever]]
+*[[brain fingerprinting]]
+*[[brain mushroom]]
+*[[brain science]]
+*[[brain stem]]
+*[[brain sugar]]
+*[[brain surgeon]]
+*[[brain surgery]]
+*[[brain truster]]
+*[[brain tumor]]
+*[[brain wave]]
+*[[brain-fag]]
+*[[brain-teaser]]
+*[[brainbox]]
+*[[braincase]]
+*[[brainchild]]
 *[[brainiac]]
+*[[brainish]]
+*[[brainless]]
+*[[brainpan]]
+*[[brainpower]]
+*[[brainsick]]
+*[[brainstem]]
+*[[brainstorm]]
+*[[brainwash]]
 *[[brainwave]]
+*[[brainworker]]
 *[[brainy]]
 *[[pick somebody's brain]]
 
