robot  Adding:it <charges#90124>

--- a/wiki/charges.wikitext
+++ b/wiki/charges.wikitext
@@ -22,3 +22,5 @@
 
 # ''second-person singular indicative present of [[charger]]''
 # ''second-person singular subjunctive present of charger''
+
+[[it:charges]]
