--- a/wiki/pick_someone%27s_brain.wikitext
+++ b/wiki/pick_someone%27s_brain.wikitext
@@ -3,5 +3,5 @@
 '''[[pick]] somebody's [[brain]]'''
 
 #To [[seek]] [[information]] from someone [[knowledgable]]; to ask [[question]]s of someone
-#:''After I spent a couple of hours '''picking his brain''', his scheme started to make sense.''
+#:''After I spent a couple of hours '''picking his brain''', his scheme started to [[make sense]].''
 [[Category:Idioms]]
