robot  Adding:et <rapport#81106>

--- a/wiki/rapport.wikitext
+++ b/wiki/rapport.wikitext
@@ -7,5 +7,6 @@ From the French ''[[rapporter]]'' "to bring back"
 #A [[relationship]] of [[mutual]] [[trust]] and [[respect]]
 [[Category:English nouns]]
 
+[[et:Rapport]]
 [[nl:rapport]]
 [[sv:rapport]]
