--- a/wiki/Plotinus.wikitext
+++ b/wiki/Plotinus.wikitext
@@ -2,4 +2,4 @@
 ===Proper noun===
 {{wikipedia}}
 '''Plotinus'''
-# [[Roman]] [[philosopher]] 205-270; father of [[Neoplatonism]]
+# [[Roman]] [[philosopher]] [[w:205|205]]-[[w:270|270]]; father of [[Neoplatonism]]
