--- a/wiki/cheap.wikitext
+++ b/wiki/cheap.wikitext
@@ -45,5 +45,7 @@ From Old English [[cēap]], ''[[trade]]''. Originally a loan from Latin [[caupō
 *Swedish: [[billig]], [[förmånlig]], [[fördelaktig]]
 *Turkish: [[ucuz]]
 
-[[it:cheap]]
 [[Category:1000 English basic words]]
+
+[[it:cheap]]
+[[pl:Cheap]]
