sv <Laplace operator#99613>

--- a/wiki/Laplace_operator.wikitext
+++ b/wiki/Laplace_operator.wikitext
@@ -3,3 +3,5 @@
 {{wikipedia}}
 '''[[Laplace]]  [[operator]]'''
 #{{mathematics}},{{physics}} an [[elliptic operator]], Δ, used in the [[modelling]] of [[wave]] [[propogation]], [[heat]] [[flow]] and many other [[application]]s
+====Translations====
+*Swedish: [[Laplaceoperator]] ''c'', [[Laplacian]] ''c''
