+cat heteronyms <perfect#5807>

--- a/wiki/perfect.wikitext
+++ b/wiki/perfect.wikitext
@@ -38,3 +38,5 @@ From the Middle English, [[perfit]], from the Old French, [[parfit]], from the L
 
 ===Related Terms===
 [[picture-perfect]]
+
+[[Categorgy: English heteronyms]]
