--- a/wiki/radar.wikitext
+++ b/wiki/radar.wikitext
@@ -1,17 +1,20 @@
 ==English==
-===Noun===
 ====Etymology====
-Acronym from '''ra'''dio '''d'''etection '''a'''nd '''r'''anging.
-
-===Meanings===
-#A system to detect aircraft, ships and other objects in a certain area. It uses pulses of high frequency electromagnetic waves.  It is similar to [[sonar]], which uses sound instead of radio waves.
+Acronym from '''RA'''dio '''D'''etection '''A'''nd '''R'''anging.
+===Noun===
+{{wikipedia}}
+'''radar'''
+# A method of [[detecting]] [[distant]] [[object]]s and [[determining]] their [[position]], [[velocity]], or other characteristics by [[analysis]] of [[VHF]] [[radio]] [[wave]]s [[reflect]]ed from their [[surface]]s
 
 ===Translations===
 *Chinese: 雷達 (léidá), car: 測速裝置 (cè sù zhuāngzhì) "speed-detecting equipment"
 *{{sv}}: [[radar]] ''c''
 
-====See also====
-{{pedialite}}
+===Derived terms===
+*[[radar telescope]]
+*[[off the radar]]
+*[[under the radar]]
+*[[radome]]
 
 [[pl:Radar]]
 [[tr:radar]]
