robot  Adding:et <chevalier#91361>

--- a/wiki/chevalier.wikitext
+++ b/wiki/chevalier.wikitext
@@ -6,3 +6,5 @@ From French, ultimately from Latin "caballus".
 '''chevalier'''
 # A [[cavalier]]; a [[knight]].
 # In tarot [[cards]], the card between the [[valet]] and the [[dame]]
+
+[[et:Chevalier]]
