+verb def, examples, fmt/wikify, expand, cat heteronyms <intimate#75437>

--- a/wiki/intimate.wikitext
+++ b/wiki/intimate.wikitext
@@ -3,12 +3,25 @@
 Latin ''intimare'' 'impress, make familiar'.
 
 ===Adjective===
-'''intimate'''
-#Closely acquainted; familiar.
-#A sexual relationship.
+'''intimate''' (comparative: '''more intimate''', superlative '''most intimate''')
+#[[Close]]ly [[acquaint]]ed; [[familiar]]
+#of or [[sharing]] a [[sexual]] [[relationship]]
+#:''She enjoyed some '''intimate''' time alone with her husband.''
+#[[personal]] or [[private]]
+#:''an '''intimate''' friend''
+#:''an '''intimate''' setting''
 
 ===Noun===
 '''intimate'''
-#A very close friend.
+#(''countable'') A very close [[friend]]
+#:''Only a couple of '''intimates''' had ever read his writing.'' 
+#(''usually plural'') [[underwear]], [[sleepwear]], and/or [[lingerie]], especially offered for [[sale]] in a [[store]] for [[women]]
+#:''You'll find bras and panties in the women's '''intimates''' section upstairs.''
 
+===Intransitive verb===
+'''intimate'''
+#to [[suggest]] or [[disclose]] [[discreet]]ly
+#:''He intimated that we should leave before the argument escalated.''
+
+[[Category: English heteronyms]]
 [[it:intimate]]
