robot  Adding:pl <rebellion#93333>

--- a/wiki/rebellion.wikitext
+++ b/wiki/rebellion.wikitext
@@ -4,3 +4,5 @@
 '''rebellion'''
 # Armed [[resistance]] to an established [[government]] or ruler.
 # Defiance of [[authority]] or [[control]].
+
+[[pl:Rebellion]]
