robot  Adding:fi <chicken#8161>

--- a/wiki/chicken.wikitext
+++ b/wiki/chicken.wikitext
@@ -168,3 +168,4 @@ The translations below need to be checked by native speakers and inserted into t
 [[Category:English birds]]-->
 
 [[it:chicken]]
+[[fi:Chicken]]
