a proper entry <landaulette#99632>

--- a/wiki/landaulette.wikitext
+++ b/wiki/landaulette.wikitext
@@ -1,1 +1,7 @@
-#redirect [[landaulet]]
+==English==
+===Noun===
+'''landaulette'''
+# a [[motor car]] with an [[open]] [[driver]]'s [[seat]] and an [[enclosed]] [[rear]] [[section]] with one [[cross]]-[[seat]] and a [[collapsible]] [[roof]]; sometimes used for [[wedding]]s
+===See also===
+*[[landau]]
+*[[landaulet]]
