robot  Adding:pt <chilli#77245>

--- a/wiki/chilli.wikitext
+++ b/wiki/chilli.wikitext
@@ -5,3 +5,5 @@
 #The [[pungent]] fresh or dried [[fruit]] of any of several [[cultivate]]d varieties of [[capsicum]], used especially as a [[flavouring]] in [[cooking]]
 #[[Chilli con carne]]
 [[Category:Nahuatl derivations]]
+
+[[pt:Chilli]]
