robot  Adding:fi,hi,nl,ja,hu,et <chili#96846>

--- a/wiki/chili.wikitext
+++ b/wiki/chili.wikitext
@@ -7,3 +7,10 @@
 *[[chili pepper]]
 ===See also===
 *[[chili con carne]]
+
+[[et:Chili]]
+[[hi:Chili]]
+[[hu:Chili]]
+[[nl:Chili]]
+[[ja:Chili]]
+[[fi:Chili]]
