robot  Adding:et <chine#65421>

--- a/wiki/chine.wikitext
+++ b/wiki/chine.wikitext
@@ -7,10 +7,11 @@
 ===Related terms===
 *[[chinois]]
 
-[[hi:Chine]]
-[[ja:Chine]]
-
 ===English===
 ===Noun===
 '''chine'''
 # The top of a [[ridge]].
+
+[[et:Chine]]
+[[hi:Chine]]
+[[ja:Chine]]
