--- a/wiki/landaulette.wikitext
+++ b/wiki/landaulette.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Noun===
 '''landaulette'''
+# a small [[landau]]
 # a [[motor car]] with an [[open]] [[driver]]'s [[seat]] and an [[enclosed]] [[rear]] [[section]] with one [[cross]]-[[seat]] and a [[collapsible]] [[roof]]; sometimes used for [[wedding]]s
-===See also===
-*[[landau]]
+===Synonyms===
 *[[landaulet]]
