robot  Adding:fi <chiudere#43254>

--- a/wiki/chiudere.wikitext
+++ b/wiki/chiudere.wikitext
@@ -12,3 +12,4 @@ Note: in the following conjugation:- passato remoto should be io chiusi; past pa
 
 [[fr:chiudere]]
 [[it:chiudere]]
+[[fi:Chiudere]]
