--- a/wiki/cholesterol.wikitext
+++ b/wiki/cholesterol.wikitext
@@ -3,3 +3,5 @@
 {{wikipedia}}
 '''cholesterol'''
 #{{biochemistry}} a [[sterol]] [[lipid]] [[synthesized]] by the [[liver]] and [[transported]] in the [[bloodstream]] to the [[membrane]]s of all [[animal]] [[cell]]s; it plays a [[central]] [[role]] in many [[biochemical]] [[process]]es and, as a [[lipoprotein]] that [[coat]]s the [[wall]]s of [[blood]] [[vessel]]s, is [[associated]] with [[cardiovascular]] [[disease]]
+
+[[nl:cholesterol]]
