robot  Adding:pl,ja,fi,nl,it <cholera#90967>

--- a/wiki/cholera.wikitext
+++ b/wiki/cholera.wikitext
@@ -24,3 +24,9 @@ Latin from Greek "bile"
 
 ===Related terms===
 *[[choler]]
+
+[[it:cholera]]
+[[nl:cholera]]
+[[ja:cholera]]
+[[pl:Cholera]]
+[[fi:Cholera]]
