robot  Adding:fi <Christian#8305>

--- a/wiki/Christian.wikitext
+++ b/wiki/Christian.wikitext
@@ -66,3 +66,4 @@ The translations below need to be checked by native speakers and inserted into t
 
 [[it:christian]]
 [[pl:Christian]]
+[[fi:Christian]]
