Expand.  Needs further attention, especially to definitions, plus pronunciation <amount#4350>

--- a/wiki/amount.wikitext
+++ b/wiki/amount.wikitext
@@ -1,7 +1,11 @@
 ==English==
 
 ===Noun===
-# the [[number]] of elements in a [[set]] (uncountable)
+'''amount'''
+#(countable or uncountable) [[quantity]] or [[volume]]
+#:''Pour a small '''amount''' of water into the dish.''
+#:''The dogs need different '''amounts''' of food.''
+#(uncountable) the [[number]] of elements in a [[set]] 
 
 ====Translations====
 *'''Dutch''': [[hoeveelheid]] ''f'', [[bedrag]] ''n'', [[saldo]] ''n''
@@ -15,8 +19,17 @@
 *'''Spanish''': [[cantidad]] ''f''
 *{{sv}}: [[antal]] ''n'', [[mängd]] ''c'', [[kvantitet]] ''c''
 
+===Intransitive verb===
+'''amount''' ('''amounts''', '''amounted''', '''amounting''')
+#to [[total]] or [[evaluate]]
+#:''It amounts to three dollars and change.''
+#to [[succeed]] or have [[value]]
+#:''He was a pretty good student, but never '''amounted''' to much professionally.''
+
+
 ====Related words====
 *[[number]]
+*[[quantity]]
 
 [[Category:1000 English basic words]]
 
