--- a/wiki/registration.wikitext
+++ b/wiki/registration.wikitext
@@ -6,3 +6,5 @@
 #(countable) that which [[register]]s or makes something [[official]], e.g. the [[form]] or [[paper]] that registers
 #:''Did you submit your car '''registration''' yet?''
 #(uncountable) [[alignment]], e.g. of [[colors]] or other [[element]]s in a [[printing]] [[process]]
+
+[[pl:Registration]]
