robot  Adding:it <chubby#89771>

--- a/wiki/chubby.wikitext
+++ b/wiki/chubby.wikitext
@@ -6,3 +6,5 @@
 ===Noun===
 '''chubby'''
 #(''slang'') [[blood]] [[fill]]ed [[penis]] which doesn't qualify as a full [[erection]]; penis which is neither [[flaccid]] nor fully [[erect]]ed
+
+[[it:chubby]]
