robot  Adding:et <relation#56037>

--- a/wiki/relation.wikitext
+++ b/wiki/relation.wikitext
@@ -47,5 +47,7 @@ From Latin '''[[relatio]]''', noun of process form from perfect passive particip
 *[[parent]]
 *[[table]]
 
-[[pt:Relation]]
 [[Category:1000 English basic words]]
+
+[[et:Relation]]
+[[pt:Relation]]
