robot  Adding:pl,it <ciao#43622>

--- a/wiki/ciao.wikitext
+++ b/wiki/ciao.wikitext
@@ -25,7 +25,6 @@ From the [[Venetian]] [[dialect]] pronunciation of ''[[schiavo]]'', (I'm your) [
 ===Derived terms===
 *[[ciao ciao]]
 
-[[de:ciao]]
 ----
 == Romanica ==
 === Etymology ===
@@ -36,3 +35,7 @@ Italian
 
 #[[hello]], [[hi]] (''especially US''), [[howdy]] (''US'')
 #[[bye]], [[goodbye]]
+
+[[de:ciao]]
+[[it:ciao]]
+[[pl:Ciao]]
