robot  Adding:fi <remorse#98399>

--- a/wiki/remorse.wikitext
+++ b/wiki/remorse.wikitext
@@ -23,3 +23,5 @@ First attested circa [[w:14th century|14th century]], from [[Old French]] [[remo
 *[[remorsefully]]
 *[[remorseless]]
 *[[remorselessly]]
+
+[[fi:Remorse]]
