--- a/wiki/remind.wikitext
+++ b/wiki/remind.wikitext
@@ -5,3 +5,5 @@
 '''to remind'''
 
 #To put (one) in mind of something; to bring to the remembrance of; to bring to the notice or consideration of (a person).
+
+[[fi:Remind]]
