/* Intransitive verb */  +{infl} <intimate#75437>

--- a/wiki/intimate.wikitext
+++ b/wiki/intimate.wikitext
@@ -19,7 +19,7 @@ Latin ''intimare'' 'impress, make familiar'.
 #:''You'll find bras and panties in the women's '''intimates''' section upstairs.''
 
 ===Intransitive verb===
-'''intimate'''
+{{en-infl-reg-vowel|intimat|e}}
 #to [[suggest]] or [[disclose]] [[discreet]]ly
 #:''He intimated that we should leave before the argument escalated.''
 
