robot  Adding:fi,et <renaissance#72082>

--- a/wiki/renaissance.wikitext
+++ b/wiki/renaissance.wikitext
@@ -11,3 +11,6 @@
 '''Renaissance'''
 # Of, or relating to the Renaissance.
 # Of, or relating to the [[style]] of art or architecture of the Renaissance.
+
+[[et:Renaissance]]
+[[fi:Renaissance]]
