robot  Adding:gl <reproducible#98945>

--- a/wiki/reproducible.wikitext
+++ b/wiki/reproducible.wikitext
@@ -3,3 +3,5 @@
 '''reproducible'''
 #(''of a measurement, experiment etc'') [[capable]] of being [[reproduce]]d at a different [[time]] or [[place]] and by different [[people]]
 [[category:English adjectives]]
+
+[[gl:Reproducible]]
