robot  Adding:de <clan#50292>

--- a/wiki/clan.wikitext
+++ b/wiki/clan.wikitext
@@ -12,9 +12,10 @@ Middle English, from Scottish Gaelic [[clann]], ''family''
 * Irish: [[clann]]
 *{{sv}}: [[klan]] ''c'', [[stam]] ''c''
 
+[[Category:Scottish Gaelic derivations]]
+[[Category:Irish derivations]]
+
+[[de:Clan]]
 [[it:clan]]
 [[hu:Clan]]
 [[pl:Clan]]
-
-[[Category:Scottish Gaelic derivations]]
-[[Category:Irish derivations]]
