--- a/wiki/disable.wikitext
+++ b/wiki/disable.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Verb===
 '''to disable'''
-# to render [[unable]]; to take away the [[ability]]
+# to [[render]] [[unable]]; to take away the [[ability]]
 # ''(of a person)'' to [[impair]] the [[physical]] or [[mental]] abilities of; to cause a serious, permanent [[injury]] which has a [[negative]] [[impact]] on the person's [[social]] life
 #:''Falling off the horse '''disabled''' him.''
 # to [[deactivate]] a function of an electronical or mechanical device
@@ -11,5 +11,5 @@
 [[fi:Disable]]
 
 ==Spanish==
-==Noun==
-# ''(of a person)''.- minusválido
+===Noun===
+#(of a person) minusválido
