--- a/wiki/Disneyfication.wikitext
+++ b/wiki/Disneyfication.wikitext
@@ -2,7 +2,7 @@
 
 ===Etymology===
 
-From Disney (proper noun - An American coporation) + 'fy'. The term was orginally coined to describe the transformation of Times Square, New York following the opening of a Disney store in the early 1990's. Following this the [[Peep Shows|Peep Show]] and [[Striptease]] joints that had come to dominate the area in the previous decades closed down or were driven out by changes in the Zoning laws. ''Disneyfication'' is, perhaps, the commoner form. 
+From Disney (proper noun - An American corporation) + 'fy'. The term was orginally coined to describe the transformation of Times Square, New York following the opening of a Disney store in the early 1990's. Following this the [[Peep Shows|Peep Show]] and [[Striptease]] joints that had come to dominate the area in the previous decades closed down or were driven out by changes in the Zoning laws. ''Disneyfication'' is, perhaps, the commoner form. 
 
 ===Verb===
 
