--- a/wiki/encompass.wikitext
+++ b/wiki/encompass.wikitext
@@ -6,7 +6,7 @@
 #:''This book on English [[:w:grammar|grammar]] '''encompasses''' all [[irregular]] verbs.''
 ====Translations====
 *German: [[umfassen]] (1,2)
-*Spanish: Abarcar
+*Spanish: [[abarcar]]
 ==== Synonyms ====
 *[[comprehend]]
 *[[embrace]]
