/* Noun */ tweaked def <droop#99648>

--- a/wiki/droop.wikitext
+++ b/wiki/droop.wikitext
@@ -19,7 +19,8 @@ From Middle English '''''[[droupen]]''''' < Old Norse '''''[[drūpa]]'''''
 
 === Noun ===
 '''droop'''
-#something which is limp or sagging; the condition of drooping
+#something which is [[limp]] or [[sag]]ging; a condition or [[posture]] of drooping
+#:''He walked with a discouraged '''droop'''.''
 
 === Translations ===
 *French: [[tomber]]
