robot  Adding:nl <reservoir#65802>

--- a/wiki/reservoir.wikitext
+++ b/wiki/reservoir.wikitext
@@ -15,4 +15,5 @@ French  ''[[réservoir]]'', from ''[[réserver]]'' 'to reserve, keep'.
 ===See also===
 *[[Receiving reservoir]]
 
+[[nl:reservoir]]
 [[pl:Reservoir]]
