robot  Adding:nl <research#37494>

--- a/wiki/research.wikitext
+++ b/wiki/research.wikitext
@@ -26,3 +26,5 @@ Prefix [[re-]] + [[search]]: compare for noun: Old French ''[[recerche]]'', Fren
 *German: [[recherchieren]], [[erforschen]]
 *Portuguese: [[buscar]], [[explorar]], [[investigar]]
 *Swedish: [[undersöka]], [[forska]]
+
+[[nl:research]]
