--- a/wiki/require.wikitext
+++ b/wiki/require.wikitext
@@ -5,3 +5,5 @@
 #To demand; to insist upon having; to claim as by right and authority; to exact; as, to require the surrender of property.
 #To demand or exact as indispensable; to need.
 #To ask as a favor; to request.
+
+[[fi:Require]]
