robot  Adding:fi <classify#88557>

--- a/wiki/classify.wikitext
+++ b/wiki/classify.wikitext
@@ -6,3 +6,5 @@
 #:''Should we '''classify''' "make up" as an [[idiom]] or as a [[phrasal]] [[verb]]?
 #to [[declare]] something a [[secret]], especially a [[government]] secret
 #:''They decided to '''classify''' that information.''
+
+[[fi:Classify]]
