robot  Adding:fi,it <clarinet#98868>

--- a/wiki/clarinet.wikitext
+++ b/wiki/clarinet.wikitext
@@ -29,3 +29,6 @@ Learned borrowing from Italian ''clarinetto'', diminutive of ''clarino'' meaning
 *[[Slovak]]: [[klarinet]]
 *[[Spanish]]: [[clarinete]]
 *[[Swedish]]: [[klarinett]]
+
+[[it:clarinet]]
+[[fi:Clarinet]]
