please explain? <droop#99648>

--- a/wiki/droop.wikitext
+++ b/wiki/droop.wikitext
@@ -12,6 +12,11 @@ From Middle English '''''[[droupen]]''''' < Old Norse '''''[[drūpa]]'''''
 #to slowly become limp; to bend gradually
 #to lose all [[enthusiasm]] or [[happiness]]
 
+=== Adjective ===
+'''droop'''
+#lacking stiffness
+#:''Sharon's sad, '''drooped''' face lit up when I gave her tickets to see tonight's game.''
+
 === Noun ===
 '''droop'''
 #something which is [[limp]] or [[sag]]ging; a condition or [[posture]] of drooping
