robot  Adding:it <clarify#97014>

--- a/wiki/clarify.wikitext
+++ b/wiki/clarify.wikitext
@@ -14,3 +14,5 @@
 # {{obsolete}}: To [[glorify]].
 # To grow or become clear or transparent; to become free from feculent impurities, as wine or other liquid under clarification.
 # To grow clear or bright; to clear up.
+
+[[it:clarify]]
