--- a/wiki/table.wikitext
+++ b/wiki/table.wikitext
@@ -30,7 +30,7 @@ From French ''table'', from Latin ''[[tabula]]'', '''[[tablet]]'''
 *Danish: [[bord#Danish|bord]]
 *Dutch: [[tafel]] ''f''
 *Finnish: [[pöytä]]
-*French: table ''f''
+*French: [[table#French|table]] ''f''
 *German: [[Tisch]] ''m''
 *Hebrew: [[שולחן]]
 *Hungarian: [[asztal]]
@@ -40,7 +40,7 @@ From French ''table'', from Latin ''[[tabula]]'', '''[[tablet]]'''
 {|
 *Italian: [[tavola]] ''f''
 *Latin: [[mensa#Latin|mensa]] ''f''
-*[[Malayalam]]: mesha
+*[[Malayalam]]: [[mesha]]
 *Polish: [[stół]] ''m''
 *Portuguese: [[mesa#Portuguese|mesa]] ''f''
 *[[Romanica]]: [[mensa#Romanica|mensa]] ''f''
@@ -113,7 +113,7 @@ From French ''table'', from Latin ''[[tabula]]'', '''[[tablet]]'''
 *Swedish: [[tabell]] (2,3)
 
 ===Verb===
-'''to table''' ([[tabled]], [[tabling]])
+'''to table''' ('''tables''', '''tabled''', '''tabling''')
 
 #To put on a table.
 #(''obsolete'') To propose for [[discussion]] (from ''to put on the table'')
@@ -142,7 +142,7 @@ From French ''table'', from Latin ''[[tabula]]'', '''[[tablet]]'''
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Dutch: ter [[tafel]] [[brengen]]
+*Dutch: [[ter]] [[tafel]] [[brengen]]
 *Finnish: [[tuoda]] [[keskusteluun]]
 |}
 | width=1% |
